--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="jp.co.ur.nao.contactlensmanagement.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_adding"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/action_adding"
+        app:showAsAction="never"
+        android:onClick="addContact" />
 </menu>
